# animal_transport_project

./: .env.example  .gitignore  EVALUATION_FIX_SUMMARY.md  README.md  animal_transport_full_pipeline.ipynb  dependency_fix.py  detailed_results_demo.py  environment.yml  pyproject.toml  requirements.in  requirements.txt  simple_test_fix.py  test_LLM_inference.py  test_VLM_inference.py  test_evaluation_fix.py  test_qwen.py
api/: config.py  inference_reasoning.py  inference_vlm.py  main.py  prompts.py  rules.py  schemas.py  utils_distance.py
docker/: Dockerfile.api  Dockerfile.training  environment.yml  requirements.txt  requirements_cpu.txt
docs/: README.md
scripts/: generate_dataset.py  task_aware_training.py  train.py
src/animal_transport/api/: config.py  inference_reasoning.py  inference_vlm.py  main.py  prompts.py  rules.py
src/animal_transport/train/: __init__.py  callbacks.py  config.py  custom_trainer.py  data.py  evaluator.py  finetune_llm.py  loss.py  metrics.py  model.py  pipeline.py  train.py  utils.py
src/animal_transport/train/callbacks/: __init__.py  generation.py
src/animal_transport/train/configuration/: __init__.py  config.py  validation.py
src/animal_transport/train/core/: __init__.py  component_loader.py  pipeline.py  trainer_setup.py
src/animal_transport/train/data/: __init__.py  dataset.py  preprocessing.py
src/animal_transport/train/evaluation/: __init__.py  base.py  generation_metrics.py  language_metrics.py  (+1 more)
tests/: test_LLM_inference.py  test_VLM_inference.py  test_qwen.py
train/: config.py  finetune_llm.py  generate_dataset.py
(+10 files in other folders)
