[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animal-transport"
version = "0.1.0"
description = "Animal Transport Reasoning System"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    # List your dependencies here, or use requirements.txt
]

[tool.setuptools.packages.find]
where = ["src"]